<?xml version="1.0" encoding="utf-8"?>

<resources>
  <string name="fp__account_quick_play">Quick Play</string>
  <string name="fp__account_play_with_facebook">Play with Facebook</string>
  <string name="fp__account_register">Register</string>
  <string name="fp__account_or">or</string>
  <string name="fp__account_play_with_email">Play with Email</string>
  <string name="fp__account_email">Email</string>
  <string name="fp__account_password">Password</string>
  <string name="fp__account_re_enter_password">Re-enter password</string>
  <string name="fp__account_ok">OK</string>
  <string name="fp__account_no">No</string>
  <string name="fp__account_error_occurred">Error occurred</string>
  <string name="fp__account_valid_email">Please input a valid Email address!</string>
  <string name="fp__account_min_password_len">Password should contain at least six characters!</string>
  <string name="fp__account_password_not_match">Passwords do not match!</string>
  <string name="fp__account_login">Login</string>
  <string name="fp__account_login_email">Email Login</string>
  <string name="fp__account_login_welcome">Welcome, {}</string>
  <string name="fp__account_forgot_your_password">Forgot your password?</string>
  <string name="fp__account_bind_facebook_or_email">Binding your Facebook or email secures your game data, and lets you play with the same game data on multiple devices</string>
  <string name="fp__account_your_fpid">Your funplus ID is {}</string>
  <string name="fp__account_bind_your_account">Bind Account</string>
  <string name="fp__account_bind_email">Bind Email</string>
  <string name="fp__account_bind_with_sns">Bind with SNS:</string>
  <string name="fp__account_bind_facebook">Bind Facebook</string>
  <string name="fp__account_bind_email_to_continue">Bind Email to Continue</string>
  <string name="fp__account_bind_failed">Failed to bind account, reason: {}</string>
  <string name="fp__account_switch_logout_alert">Do you want to log out and switch accounts?</string>
  <string name="fp__account_switch_account">Switch Account</string>
  <string name="fp__account_reset_password">Reset password</string>
  <string name="fp__account_reset_password_instructions">Instructions to reset your password have been sent to your email inbox.</string>
  <string name="fp__account_reset_password_failed">Failed to reset your password, reason: {}.</string>
  <string name="fp__account_support">Support</string>
  <string name="fp__account_logout">Logout</string>
  <string name="fp__account_please_wait">Please wait...</string>
  <string name="fp__account_user_center">User Center</string>
  <string name="fp__account_close">Close</string>
  <string name="fp__account_no_available_account_types">No available login types!</string>
  <string name="fp__account_bound_account_prompt">Your account has bound to {} ({}), Would you like to login with {}?</string>
  <string name="com_facebook_like_button_not_liked">Like</string>
  <string name="com_facebook_like_button_liked">Liked</string>
  <string name="com_facebook_loginview_log_out_button">Log out</string>
  <string name="com_facebook_loginview_log_in_button">Log in</string>
  <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
  <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
  <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
  <string name="com_facebook_loginview_log_out_action">Log out</string>
  <string name="com_facebook_loginview_cancel_action">Cancel</string>
  <string name="com_facebook_loading">Loading...</string>
  <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
  <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
  <string name="com_facebook_tooltip_default">New! You\'re in control - choose what info you want to share with apps.</string>
  <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
  <string name="com_facebook_share_button_text">Share</string>
  <string name="com_facebook_send_button_text">Send</string>
</resources>
