<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="@dimen/fp__account_window_width"
        android:layout_height="wrap_content"
        android:padding="@dimen/fp__account_window_padding"
        android:background="@drawable/fp__account_window_bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/fp__account_header_height">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/fp__logo_padding"
                android:background="@color/fp__white"
                android:textColor="@color/fp__account_title_color"
                android:textSize="@dimen/fp__account_title_text_size"
                android:text="@string/fp__account_login_email"/>

            <include layout="@layout/fp__account_back_button"/>

        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fp__account_body_margin_top"
            android:layout_marginRight="@dimen/fp__account_body_margin_right"
            android:layout_marginBottom="@dimen/fp__account_body_margin_bottom"
            android:layout_marginLeft="@dimen/fp__account_body_margin_left">

            <EditText
                android:id="@+id/fp__account_email_field"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fp__account_input_field_height"
                android:paddingLeft="@dimen/fp__account_input_field_padding_left"
                android:drawableLeft="@drawable/fp__account_user"
                android:drawablePadding="@dimen/fp__account_input_field_drawable_padding"
                android:background="@drawable/fp__account_input_field"
                android:layout_marginTop="@dimen/fp__account_input_field_margin_top"
                android:textColorHint="@color/fp__account_input_hint_color"
                android:hint="@string/fp__account_email"/>

            <EditText
                android:id="@+id/fp__account_password_field"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fp__account_input_field_height"
                android:paddingLeft="@dimen/fp__account_input_field_padding_left"
                android:drawableLeft="@drawable/fp__account_lock"
                android:drawablePadding="@dimen/fp__account_input_field_drawable_padding"
                android:background="@drawable/fp__account_input_field"
                android:layout_marginTop="@dimen/fp__account_input_field_margin_top"
                android:textColorHint="@color/fp__account_input_hint_color"
                android:hint="@string/fp__account_password"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"/>

            <Button
                android:id="@+id/fp__account_email_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fp__account_submit_button_margin_top"
                android:background="@drawable/fp__account_submit_button"
                android:text="@string/fp__account_login"
                android:textSize="@dimen/fp__account_submit_button_text_size"
                android:textColor="@color/fp__white"/>

        </LinearLayout>

        <TextView
            android:id="@+id/fp__account_reset_password_clickable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/fp__account_footer_text_size"
            android:layout_marginTop="@dimen/fp__account_footer_padding_top"
            android:layout_marginBottom="@dimen/fp__account_footer_padding_bottom"
            android:clickable="true"
            android:textColor="@color/fp__account_clickable_color"
            android:text="@string/fp__account_forgot_your_password"/>

    </LinearLayout>

</LinearLayout>
